--- a/fronten/src/components/Login.css
+++ b/fronten/src/components/Login.css
@@ -103,14 +103,21 @@ button:hover {
     margin-top: 10px;
 }
 
-.login-popup {
-    position: fixed;
-    height: 90vh;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* background-color: rgba(255, 255, 255, 0.597); */
-    padding: 20px;
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
-    z-index: 1000; 
+.password-field {
+    position: relative;
 }
+
+
+.password-field .eye-icon {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    color: #444444; 
+    font-size: 25px;
+    width: 8%;
+}
+
