--- a/fronten/src/components/Login.css
+++ b/fronten/src/components/Login.css
@@ -3,11 +3,27 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    background-color: #ffffff;
+    height: 88vh;
+    /* background-color: #ffffff; */
     font-family: Arial, sans-serif;
     padding: 3rem;
-    border-radius: 3rem;
+    /* border-radius: 3rem; */
+    background-image: url('../Images/heroimg1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
+}
+
+.login-main-container {
+    background-color: rgba(255, 255, 255, 0.503) ;
+    width: 42%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem;    
+    backdrop-filter: blur(10px);
 }
 
 h3 {
@@ -15,6 +31,25 @@ h3 {
     color: #333;
     margin-bottom: 20px;
 }
+
+
+.bust {
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+}
+
+.bust h4 {
+    color: #000;
+    list-style: none;
+    border-bottom: none;
+    font-size: 1.3rem;
+}
+
+.bust a {
+    text-decoration: none; 
+    color: inherit; 
+    transition: color 0.3s ease; }
 
 .container-login {
     width: 100%;
@@ -40,6 +75,7 @@ h3 {
     font-size: 1rem;
     color: #333;
     transition: border-color 0.3s ease;
+    background-color: transparent;
 }
 
 .logins input:focus {
@@ -48,7 +84,7 @@ h3 {
 }
 
 .logins input::placeholder {
-    color: #999;
+    color: #000000;
 }
 
 button {
@@ -92,7 +128,7 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 90px;
+    /* top: 90px; */
     font-size: 0.8rem;
     color: #666;
 }
