--- a/fronten/src/components/Navbar.css
+++ b/fronten/src/components/Navbar.css
@@ -1,18 +1,25 @@
 .navbar {
     width: 97%;
-    /* position: fixed; */
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #000000;
-    color: #fff;
+    background-color:rgb(255, 255, 255);
+    color: #0000;
+    backdrop-filter: blur(8px);
     font-family: Arial, sans-serif;
+    transition: transform 0.4s ease-in-out;
+    z-index: 1000;
+}
+
+.navbar.hidden {
+    transform: translateY(-100%);
 }
 
 .navbar-logo h1 {
     font-size: 1.5rem;
-    color: #fff;
+    color: #000;
 }
 
 .navbar-links {
@@ -21,7 +28,7 @@
 }
 
 .navbar-links a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-weight: 500;
     position: relative;
@@ -54,7 +61,7 @@
 }
 
 .icon {
-    color: #fff;
+    color: #000;
     font-size: 1.2rem;
     cursor: pointer;
     transition: color 0.4s ease, transform 0.4s ease;
@@ -66,7 +73,7 @@
 }
 
 .auth-links a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     margin-left: 1rem;
     font-weight: 500;
@@ -88,8 +95,8 @@
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #ffffff;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    box-shadow: 0px 8px 16px rgba(255, 255, 255, 0.2);
     padding: 0.5rem 1rem;
     border-radius: 4px;
     min-width: 180px;
@@ -105,7 +112,7 @@
 }
 
 .brands-dropdown a:hover {
-    color: #007bff; 
+    color: #000000; 
 }
 
 .brands-container:hover .brands-dropdown {
@@ -126,7 +133,7 @@
   }
   
   .profile-modal-content {
-    background-color: #fff;
+    background-color: #000;
     padding: 15px;  
     border-radius: 8px;
     width: 60%;
